Fix dark mode colours and text overflowing on accoutn deletion page

--- a/www/style.css
+++ b/www/style.css
@@ -920,7 +920,7 @@ iframe.content {
     :root {
         --background: black;
         --text: white;
-        --light: #17110d;
+        --light: #0d1317;
         --lightText: white;
         --dark: #b7c4e0;
         --darkText: black;
